--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -24,14 +24,15 @@
                 <ul class="navbar-nav">
 
                     <h:form id="navbarForm">
-
+    `                    <!--  Logo -->
+                        <li class="nav-item" style="list-style-type: none;">
+                            <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;" />
+                        </li>
 
                         <!--  für anonymous User -->
-                        <h:panelGroup  >
+                        <h:panelGroup rendered="#{sessionInfo.anonymous}" >
                         <ul class="navbar-nav" style="display: flex; flex-wrap: wrap;">
-                            <li class="nav-item" style="list-style-type: none;">
-                                <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;" />
-                            </li>
+
 
 
                             <li class="nav-item justify-content-end">
@@ -39,50 +40,99 @@
 
                             </li>
                             <li class="nav-item justify-content-end">
-                                <h:link outcome="help" value="Hilfeseite" styleClass="nav-link" />
+                                <h:link outcome="/views/help/help" value="Hilfeseite" styleClass="nav-link" />
                             </li>
 
                         </ul>
-                        </h:panelGroup >
+                        </h:panelGroup  >
+
+
+                        <!--  für authenticated -->
+                       <h:panelGroup rendered="#{!sessionInfo.pending and !sessionInfo.anonymous}">
+
+                           <div class="navbar">
+                               <ul class="nav navbar-nav">
+                                   <li class="nav-item">
+                                       <h:link outcome="/views/authenticated/profile.xhtml" value="Profilseite" styleClass="nav-link" />
+                                   </li>
+                                   <li class="nav-item">
+                                       <h:commandButton action="#{navigationBacking.logout}" value="Abmelden" styleClass="nav-link" />
+                                   </li>
+                                   <li class="nav-item">
+                                       <h:link outcome="circulationslist" value="Hauptseite" styleClass="nav-link" />
+                                   </li>
+                               </ul>
+                           </div>
+
+
+                       </h:panelGroup>
+
 
 
                         <!-- für Prüfungsberechtigte -->
-                        <h:panelGroup rendered="#{sessionInfo.user.roleId >= 1}" >
+                        <h:panelGroup rendered="#{sessionInfo.examiner}" >
                             <li class="nav-item">
                                 <h:commandButton value="Abmelden" action="#{navigationBacking.logout}" styleClass="nav-link" />
                             </li>
                             <li class="nav-item">
                                 <h:link outcome="profile" value="Profilseite" styleClass="nav-link" />
                             </li>
+                            <li class="nav-item">
+                                <h:link outcome="help/helpExaminer" value="Hilfeseite" styleClass="nav-link" />
+                            </li>
 
                         </h:panelGroup>
 
+
                         <!-- für Prüfungskommissionsmitglieder -->
-                        <h:panelGroup rendered="#{sessionInfo.user.roleId >= 2}">
+                        <h:panelGroup rendered="#{sessionInfo.committeeMember}">
                             <li class="nav-item">
-                                <h:link outcome="help2" value="Hilfeseite" styleClass="nav-link" />
+                                <h:link outcome="help/helpCommitteeMember" value="Hilfeseite" styleClass="nav-link" />
                             </li>
-                            <li class="nav-item">
-                                <h:commandButton action="#{circulationCreatingBacking.create}" value="Create Circulation" styleClass="nav-link" />
-                            </li>
+
                         </h:panelGroup>
 
                         <!-- für Dekanate -->
-                        <h:panelGroup rendered="#{sessionInfo.user.roleId >= 3}">
-                            <li class="nav-item">
-                                <h:link outcome="help3" value="Hilfeseite" styleClass="nav-link" />
-                            </li>
-                            <li class="nav-item">
-                                <h:link outcome="userlist" value="Hauptseite" styleClass="nav-link" />
-                            </li>
+                        <h:panelGroup rendered="#{sessionInfo.deanery}">
+                            <div class="navbar">
+                                <ul class="nav navbar-nav">
+                                    <li class="nav-item">
+                                        <h:link outcome="/views/help/helpDeanery" value="Hilfeseite" styleClass="nav-link" />
+                                    </li>
+
+                                </ul>
+                            </div>
                         </h:panelGroup>
 
                         <!-- für Administratoren -->
-                        <h:panelGroup rendered="#{sessionInfo.user.roleId >= 4}">
+                        <h:panelGroup rendered="#{sessionInfo.admin}">
                             <li class="nav-item">
-                                <h:link outcome="help4" value="Hilfeseite" styleClass="nav-link" />
+                                <h:link outcome="/views/help/helpAdmin.xhtml" value="Hilfeseite" styleClass="nav-link" />
                             </li>
                         </h:panelGroup>
+
+                        <h:panelGroup rendered="#{sessionInfo.committeeMember and sessionInfo.deanery and sessionInfo.admin}">
+
+                        <div class="navbar">
+                            <ul class="nav navbar-nav">
+                                <li class="nav-item">
+                                    <h:commandButton action="#{circulationCreatingBacking.create}" value="Create Circulation" styleClass="nav-link" />
+                                </li>
+                            </ul>
+                        </div>
+                        </h:panelGroup>
+
+                        <h:panelGroup rendered="#{ sessionInfo.deanery and sessionInfo.admin}">
+
+                            <div class="navbar">
+                                <ul class="nav navbar-nav">
+                                    <li class="nav-item">
+                                        <h:commandLink outcome="/views/examineCommittee/userList.xhtml" value="BenutzerListe" styleClass="nav-link" />
+                                    </li>
+                                </ul>
+                            </div>
+                        </h:panelGroup>
+
 
 
                     </h:form>
