--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -111,7 +111,7 @@
                             </li>
                         </h:panelGroup>
 
-                        <h:panelGroup rendered="#{sessionInfo.committeeMember and sessionInfo.deanery and sessionInfo.admin}">
+                        <h:panelGroup rendered="#{sessionInfo.committeeMember or sessionInfo.deanery or sessionInfo.admin}">
 
                         <div class="navbar">
                             <ul class="nav navbar-nav">
@@ -122,7 +122,7 @@
                         </div>
                         </h:panelGroup>
 
-                        <h:panelGroup rendered="#{ sessionInfo.deanery and sessionInfo.admin}">
+                        <h:panelGroup rendered="#{ sessionInfo.deanery or sessionInfo.admin}">
 
                             <div class="navbar">
                                 <ul class="nav navbar-nav">
