--- a/src/main/webapp/views/deanery/userList.xhtml
+++ b/src/main/webapp/views/deanery/userList.xhtml
@@ -65,6 +65,23 @@
                         <h:outputText value="#{user.accountState}" />
                     </h:column>
 
+                    <!-- Email -->
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="Faculty" />
+                        </f:facet>
+                        <h:outputText  />
+                    </h:column>
+
+                    <!-- Status -->
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="User State" />
+                        </f:facet>
+                        <h:outputText  />
+                    </h:column>
+
+
                 </h:dataTable>
 
                 <!-- Pagination Controls -->
