--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -1,109 +1,83 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough" >
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
 <f:view>
     <h:head>
-        <title>header</title>
-
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
-
-
+        <title>Header</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     </h:head>
-
     <h:body>
-        <div class="navbar navbar-expand-lg navbar-light bg-light">
-
-
-
-
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;" />
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-
-                    <h:form id="navbarForm">
-    `                    <!--  Logo -->
-                        <li class="nav-item" style="list-style-type: none;">
-                            <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;" />
-                        </li>
-
+                <h:form id="navbarForm">
+                    <ul class="navbar-nav ml-auto">
                         <!--  für anonymous User -->
-                        <h:panelGroup rendered="#{sessionInfo.anonymous}" >
-                        <ul class="navbar-nav" style="display: flex; flex-wrap: wrap;">
-
-
-
-                            <li class="nav-item justify-content-end">
-                                <h:commandLink value="impressum" action="impressum"  styleClass="nav-link"/>
-
+                        <h:panelGroup rendered="#{sessionInfo.anonymous}">
+                            <li class="nav-item">
+                                <h:commandLink value="Impressum" action="impressum" styleClass="nav-link" />
                             </li>
-                            <li class="nav-item justify-content-end">
+                            <li class="nav-item">
                                 <h:link outcome="/views/help/help" value="Hilfeseite" styleClass="nav-link" />
                             </li>
-
-                        </ul>
-                        </h:panelGroup  >
-
-
+                        </h:panelGroup>
                         <!--  für authenticated -->
-                       <h:panelGroup rendered="#{!sessionInfo.pending and !sessionInfo.anonymous}">
+                        <h:panelGroup rendered="#{!sessionInfo.pending and !sessionInfo.anonymous}">
 
-                           <div class="navbar">
-                               <ul class="nav navbar-nav">
-                                   <li class="nav-item">
-                                       <h:link outcome="/views/authenticated/profile.xhtml" value="Profilseite" styleClass="nav-link" />
-                                   </li>
-                                   <li class="nav-item">
-                                       <h:commandButton action="#{navigationBacking.logout}" value="Abmelden" styleClass="nav-link" />
-                                   </li>
-                                   <li class="nav-item">
-                                       <h:link outcome="circulationslist" value="Hauptseite" styleClass="nav-link" />
-                                   </li>
-                               </ul>
-                           </div>
-
-
-                       </h:panelGroup>
-
-
-
-                        <!-- für Prüfungsberechtigte -->
-                        <h:panelGroup rendered="#{sessionInfo.examiner}" >
                             <li class="nav-item">
-                                <h:commandButton value="Abmelden" action="#{navigationBacking.logout}" styleClass="nav-link" />
+                                <h:link outcome="/views/authenticated/circulationslist.xhtml" value="Hauptseite"
+                                        styleClass="nav-link" />
                             </li>
+
                             <li class="nav-item">
-                                <h:link outcome="profile" value="Profilseite" styleClass="nav-link" />
-                            </li>
-                            <li class="nav-item">
-                                <h:link outcome="help/helpExaminer" value="Hilfeseite" styleClass="nav-link" />
+                                <h:link outcome="/views/authenticated/profile.xhtml" value="Profilseite"
+                                        styleClass="nav-link" />
                             </li>
 
                         </h:panelGroup>
+                        <!-- für Prüfungsberechtigte -->
+                        <h:panelGroup rendered="#{sessionInfo.examiner}">
 
+                            <li class="nav-item">
+                                <h:link outcome="help/helpExaminer" value="Hilfeseite" styleClass="nav-link" />
+                            </li>
+                        </h:panelGroup>
+
+                        <!-- für committeeMember/ deanery/ admin -->
+                        <h:panelGroup rendered="#{sessionInfo.committeeMember or sessionInfo.deanery or sessionInfo.admin}">
+                            <li class="nav-item">
+                                <h:commandButton action="#{circulationCreatingBacking.create}" value="Create Circulation"
+                                                 styleClass="nav-link btn btn-primary" />
+                            </li>
+                        </h:panelGroup>
+                        <!-- deanery/ admin -->
+                        <h:panelGroup rendered="#{sessionInfo.deanery or sessionInfo.admin}">
+                            <li class="nav-item">
+                                <h:link outcome="/views/deanery/userList" value="BenutzerListe" styleClass="nav-link" />
+                            </li>
+                        </h:panelGroup>
 
                         <!-- für Prüfungskommissionsmitglieder -->
                         <h:panelGroup rendered="#{sessionInfo.committeeMember}">
                             <li class="nav-item">
                                 <h:link outcome="help/helpCommitteeMember" value="Hilfeseite" styleClass="nav-link" />
                             </li>
-
                         </h:panelGroup>
-
                         <!-- für Dekanate -->
                         <h:panelGroup rendered="#{sessionInfo.deanery}">
-                            <div class="navbar">
-                                <ul class="nav navbar-nav">
-                                    <li class="nav-item">
-                                        <h:link outcome="/views/help/helpDeanery" value="Hilfeseite" styleClass="nav-link" />
-                                    </li>
-
-                                </ul>
-                            </div>
+                            <li class="nav-item">
+                                <h:link outcome="/views/help/helpDeanery" value="Hilfeseite" styleClass="nav-link" />
+                            </li>
                         </h:panelGroup>
-
                         <!-- für Administratoren -->
                         <h:panelGroup rendered="#{sessionInfo.admin}">
                             <li class="nav-item">
@@ -111,39 +85,29 @@
                             </li>
                         </h:panelGroup>
 
-                        <!-- für committeeMember/ deanery/ admin-->
-                        <h:panelGroup rendered="#{sessionInfo.committeeMember or sessionInfo.deanery or sessionInfo.admin}">
 
-                        <div class="navbar">
-                            <ul class="nav navbar-nav">
+
+                        <!-- Logout button -->
+                        <h:panelGroup rendered="#{!sessionInfo.pending and !sessionInfo.anonymous}">
+
                                 <li class="nav-item">
-                                    <h:commandButton action="#{circulationCreatingBacking.create}" value="Create Circulation" styleClass="nav-link" />
+                                    <h:commandButton action="#{navigationBacking.logout}" value="Abmelden"
+                                                     styleClass="nav-link" />
                                 </li>
-                            </ul>
-                        </div>
-                        </h:panelGroup>
 
-                        <!-- deanery/ admin-->
-                        <h:panelGroup rendered="#{ sessionInfo.deanery or sessionInfo.admin}">
-
-                            <div class="navbar">
-                                <ul class="nav navbar-nav">
-                                    <li class="nav-item">
-                                        <h:link outcome="/views/deanery/userList" value="BenutzerListe" styleClass="nav-link" />
-                                    </li>
-                                </ul>
-                            </div>
                         </h:panelGroup>
 
 
 
-                    </h:form>
+                    </ul>
 
-                </ul>
+
+                </h:form>
             </div>
-        </div>
-
-
+        </nav>
     </h:body>
 </f:view>
 </html>
+
+
+
