--- a/src/main/webapp/views/help/help.xhtml
+++ b/src/main/webapp/views/help/help.xhtml
@@ -3,13 +3,15 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
-      xmlns:f="jakarta.faces.core">
+      xmlns:f="jakarta.faces.core"
+      xmlns:ui="jakarta.faces.facelets">
 
 <h:head>
     <title>help</title>
 </h:head>
 
 <h:body>
+    <ui:include src="/views/anonymous/header.xhtml" />
 
 </h:body>
 
