--- a/src/main/webapp/views/help/helpAdmin.xhtml
+++ b/src/main/webapp/views/help/helpAdmin.xhtml
@@ -4,8 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="jakarta.faces.facelets"
+>
 <f:view>
+    <ui:include src="/views/anonymous/header.xhtml" />
     <h:outputLabel value="Hello, world"/>
 </f:view>
 </html>
