--- a/src/main/webapp/views/help/helpCommitteeMember.xhtml
+++ b/src/main/webapp/views/help/helpCommitteeMember.xhtml
@@ -6,6 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
+    <ui:include src="/views/anonymous/header.xhtml" />
     <h:outputLabel value="Hello, world"/>
 </f:view>
 </html>
