make the name of Circulation as a link to the datials

--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -51,7 +51,11 @@
                             <f:ajax event="keyup" listener="#{circulationListBacking.loadCirculations}" render="dataTable" />
                         </h:inputText>
                     </f:facet>
-                    <h:outputText value="#{circulation.title}" />
+                    <h:outputLink value="circulationDetails.xhtml?circulationId=#{circulation.id}">
+                        <h:outputText value="#{circulation.title}" />
+                    </h:outputLink>
+
+
 
 
                 </h:column>
