--- a/src/main/webapp/views/authenticated/circulationDetails.xhtml
+++ b/src/main/webapp/views/authenticated/circulationDetails.xhtml
@@ -2,13 +2,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="jakarta.faces.facelets"
+>
 
 <h:head>
     <title>Circulation Details</title>
 </h:head>
 
 <h:body>
+    <ui:include src="/views/anonymous/header.xhtml" />
     <h:form>
         <h2>Circulation Details</h2>
         <f:view>
