--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -109,14 +109,23 @@
 
             <!-- Pagination Controls -->
             <div class="d-flex justify-content-center">
-                <ul class="pagination" >
-                   <h:panelGroup rendered="#{circulationListBacking.circPagination.totalNumOfPages>1}" >
+
+
+
+
+                <h:panelGroup  rendered="#{circulationListBacking.circPagination.isFirstPage()}">
+                    <h:outputText styleClass="page-item" value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.getTotalNumOfPages() }" />
+                </h:panelGroup>
+
+
+                <ul class="pagination"  >
+                   <h:panelGroup rendered = "#{circulationListBacking.circPagination.totalNumOfPages>1}">
                     <h:panelGroup layout="block" styleClass="page-item">
                         <h:commandLink value="First" action="#{circulationListBacking.circPagination.firstPage}" styleClass="page-link"/>
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="page-item" rendered="#{!circulationListBacking.circPagination.isFirstPage()}">
-                        <h:commandLink value="Previous" action="#{circulationListBacking.circPagination.previousPage()}" styleClass="page-link" />
+                        <h:commandLink value="Previous" action="#{circulationListBacking.circPagination.previousPage}" styleClass="page-link" />
                     </h:panelGroup>
 
 
@@ -124,12 +133,13 @@
 
 
                     <h:panelGroup layout="block" styleClass="page-item" rendered="#{!circulationListBacking.circPagination.isLastPage()}">
-                        <h:commandLink value="Next" action="#{circulationListBacking.circPagination.nextPage()}"
-                                       rendered="#{!circulationListBacking.circPagination.lastPage()}" styleClass="page-link"/>
+                        <h:commandLink value="Next" action="#{circulationListBacking.circPagination.nextPage()}" styleClass="page-link"/>
                     </h:panelGroup>
-                    <h:panelGroup layout="block" styleClass="page-item">
+
+                    <h:panelGroup layout="block" styleClass="page-item"  rendered="#{!circulationListBacking.circPagination.isLastPage()}">
                         <h:commandLink value="Last" action="#{circulationListBacking.circPagination.lastPage()}" styleClass="page-link"/>
                    </h:panelGroup>
+
                    </h:panelGroup>
                 </ul>
             </div>
