--- a/src/main/webapp/views/deanery/userList.xhtml
+++ b/src/main/webapp/views/deanery/userList.xhtml
@@ -86,6 +86,15 @@
 
                 <!-- Pagination Controls -->
                 <div class="d-flex justify-content-center">
+
+                    <h:panelGroup layout="block" styleClass="page-item" rendered="#{userListBacking.userPagination.isFirstPage()}" >
+                        <h:outputText styleClass="page-item" value="Page : #{userListBacking.userPagination.currentPage}
+                        of #{userListBacking.userPagination.getTotalNumOfPages() }" />
+                    </h:panelGroup>
+
+
+
+
                     <ul class="pagination" >
                         <h:panelGroup rendered="#{userListBacking.userPagination.totalNumOfPages>1}" >
                             <h:panelGroup layout="block" styleClass="page-item">
